# openlayernextjs_django

./: pre-commit-config.yaml
backend/testDjango/: .env  pyproject.toml
backend/testDjango/src/: manage.py
backend/testDjango/src/api/migrations/: 0001_initial.py
backend/testDjango/src/api/models/: item.py
backend/testDjango/src/api/serializers/: __init__.py
backend/testDjango/src/api/views/: __init__.py  itemView.py
backend/testDjango/src/apitestdjango/: asgi.py  db.sqlite3  urls.py  wsgi.py
backend/testDjango/src/apitestdjango/settings/: base.py  dev.py  prod.py
